<resources>
    <string name="app_name">AndroidClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_account">Register an account here</string>
    <string name="email_placeholder">account@email.com</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_contact">ContactActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contacts">Contacts</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="cancel_register">Cancel register</string>
    <string name="ip_address">10.0.2.2</string>
    <string name="dns_address">www.webservice.com</string>
    <string name="server_address">Server Address</string>
</resources>