<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.config.ConfigActivity">

    <RadioGroup
        android:id="@+id/radioGroupAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <RadioButton
            android:id="@+id/radioAndroidToLocalhost"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/ip_address" />

        <RadioButton
            android:id="@+id/radioDNSName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/dns_address" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_address"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupAddress"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupAddress"
        app:layout_constraintStart_toStartOf="@+id/radioGroupAddress" />
</androidx.constraintlayout.widget.ConstraintLayout>